--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -2,11 +2,14 @@ asgiref==3.5.2
 attrs==22.1.0
 autopep8==1.7.0
 beautifulsoup4==4.10.0
+boto3==1.24.83
+botocore==1.27.83
 certifi==2021.10.8
 charset-normalizer==2.0.12
 Django==4.0.6
 idna==3.3
 iniconfig==1.1.1
+jmespath==1.0.1
 jsonschema==4.15.0
 lxml==4.9.1
 numpy==1.23.2
@@ -24,6 +27,7 @@ pytest==7.1.2
 python-dateutil==2.8.2
 pytz==2022.2.1
 requests==2.27.1
+s3transfer==0.6.0
 six==1.16.0
 soupsieve==2.3.1
 sqlparse==0.4.2
